fixed searchInput click events when is hidden and fixed popupWindow jumping content when mobile keyboard is on

--- a/src/EditOrCreateNote.scss
+++ b/src/EditOrCreateNote.scss
@@ -18,11 +18,9 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        margin-top: 16px;
-        margin-bottom: 20px;
-        padding-right: 18px;
+        margin-top: 20px;
         position: absolute;
-        right: 25px;
+        right: 20px;
 
         #save-button {
             width: auto;
@@ -32,7 +30,7 @@
             padding: 2px 22px 2px 22px;
             z-index: 1000000;
             left: 50%;
-            margin-top: 8px;
+            margin-top: 20px;
             position: absolute;
             border-radius: 100px;
             font-size: 20px;
