--- a/src/PopupWindow.scss
+++ b/src/PopupWindow.scss
@@ -1,7 +1,7 @@
 #PopupWindow {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.25);
     position: fixed;
     top: 0px;
     left: 0px;
@@ -15,15 +15,19 @@
     z-index: 10000000;
     opacity: 0;
 
+    @media screen and (min-height: 500px){
+        justify-content: flex-start;
+        padding-top: 100px;
+    }
+
     #title {
         width: auto;
         height: auto;
         background-color: transparent;
         font-size: 26px;
-        margin-bottom: 25px;
-        margin-top: -200px;
         transition: color 250ms;
         text-align: center;
+        margin-bottom: 50px;
 
         @keyframes wrongPassword {
             0% {
@@ -55,7 +59,7 @@
         align-content: center;
         align-items: center;
         flex-direction: column;
-        margin-bottom: 100px;
+        margin-bottom: 25px;
 
         input {
             width: 80%;
