--- a/src/upside.scss
+++ b/src/upside.scss
@@ -33,10 +33,10 @@
 
     #search-input {
         width: 100vw;
-        height: auto;
+        height: 33px;
         background-color: transparent;
         position: absolute;
-        top: 0px;
+        top: -33px;
         left: 0px;
         display: flex;
         justify-content: center;
